plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.f12'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.retry:spring-retry'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	implementation 'com.bucket4j:bucket4j-core:8.10.1'
	implementation 'com.bucket4j:bucket4j-redis:8.10.1'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.locationtech.jts:jts-core:1.20.0'
	implementation 'com.google.genai:google-genai:1.8.0'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
	implementation 'io.micrometer:micrometer-registry-cloudwatch2'

	implementation 'io.github.resilience4j:resilience4j-micrometer'
	implementation 'io.github.resilience4j:resilience4j-all:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'

	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.withType(Test).configureEach {
	useJUnitPlatform()
	systemProperty "spring.profiles.active", "test"
}
